--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     </nav>
 
-    <div class="container mt-4">
+    <div class="container mt-4" style="max-width: 400px">
       <ul class="list-group">
         
       </ul>
